--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -78,11 +78,11 @@
 
             <div class="card mt-4">
                 <div class="card-header bg-primary text-white">
-                    <h2 class="mb-0">Alle billetter</h2>
                 </div>
             </div>
-            <div class="card-body">
-                <div id="utskriftFilmArray"></div>
+            <div class="col-md-12">
+                <h2 class="mb-0">Alle billetter</h2>
+                <div id="utskriftFilmArray" class="table-responsive"></div>
                 <button type="button" class="btn btn-danger btn-block" id="slettBilletter" onclick="slettKunder()">Slett alle billetter</button>
             </div>
         </div>
